# CPlusPlus-Practice

Effective Modern C++/: 1 - Understand template type deduction.cpp  10.cpp  1_Understand_template_type_deduction.cpp  2_Understand_auto_type_deduction.cpp  3_Understand_decltype.cpp  4_Know_how_to_view_deduced_types.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
Keywords-test/: new.cpp
demo/: 1.string_view  1.string_view.cpp  2.any.cpp  3.c++中的多态.cpp  4.类型擦拭_手写_any.cpp  5.for_each.cpp
